--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -1,7 +1,7 @@
 <nav>
   {% for item in site.data.navigation %}
-   <li> <a href="{{ item.link }}" {% if page.url == item.link %}style=class="current"{% endif %}>
+   <li><a href="{{ item.link }}" {% if page.url == item.link %}class="current"{% endif %}>
       {{ item.name }}
-    </a>   </li>
+    </a> </li>
   {% endfor %}
 </nav>
