--- a/style.css
+++ b/style.css
@@ -7,7 +7,9 @@ font-family: Tahoma, Verdana, sans-serif
  body {background-color: DarkSeaGreen;
        color: DarkSlateGray;
          width: 50%;
-  min-width: 1200px;}
+  min-width: 1200px;
+  margin-left: auto;
+margin-right: auto;}
        
 
 nav {
@@ -20,6 +22,8 @@ nav {
   padding:0  50px ;
   overflow: hidden;
   text-align: center;
+  margin-left: auto;
+margin-right: auto;
 }
 
 nav li {
